<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright 2022 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="cell_content_description">%1$d, %2$d</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="step">Step</string>
    <string name="target_steps_per_second">Target steps per second: %1$.2f</string>
    <string name="generations_per_step">Generations per step: %1$d</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="enable_autofit">Enable autofit</string>
    <string name="disable_autofit">Disable autofit</string>
    <string name="offset">Offset: x = %1$.1f, y = %2$.1f</string>
    <string name="scale">Scale: %1$.2f</string>
    <string name="paused">Paused</string>
    <string name="generations_per_second_short">GPS: %1$.2f</string>
    <string name="generations_per_second_long">Generations per second: %1$.2f</string>
    <string name="speed">Speed</string>
    <string name="edit">Edit</string>
    <string name="corner_fraction">Corner fraction: %1$.2f</string>
    <string name="size_fraction">Size fraction: %1$.2f</string>
    <string name="settings">Settings</string>
    <string name="shape">Shape</string>
    <string name="round_rectangle">Round Rectangle</string>
    <string name="see_all">See all…</string>
    <string name="back">Back</string>
    <string name="algorithm_implementation">Implementation</string>
    <string name="hash_life_algorithm">Hashlife</string>
    <string name="naive_algorithm">Naïve</string>
    <string name="dark_theme_config">Theme</string>
    <string name="follow_system">Follow system</string>
    <string name="dark_theme">Dark</string>
    <string name="light_theme">Light</string>
    <string name="algorithm">Algorithm</string>
    <string name="feature_flags">Feature Flags</string>
    <string name="visual">Visual</string>
    <string name="quick_settings_info">Settings saved for quick access will appear here</string>
    <string name="add_setting_to_quick_access">Add setting to quick access</string>
    <string name="remove_setting_from_quick_access">Remove setting from quick access</string>
    <string name="open_in_settings">Open in settings</string>
    <string name="disable_agsl">Disable AGSL</string>
    <string name="disable_opengl">Disable OpenGL</string>
</resources>
