...
                    .windowInsetsPadding(WindowInsets.safeDrawing.only(WindowInsetsSides.Horizontal))
                    .animatePlacement(
                        alignment = Alignment.BottomCenter
                    )
                    .layoutId(CellUniverseActionCard)
            ) {
                CellUniverseActionCard(
                    isTopCard = isActionCardTopCard,
                    temporalGameOfLifeState = temporalGameOfLifeState,
                    actionCardState = actionCardState,
                    modifier = Modifier
                        .align(Alignment.Center)
                        .padding(8.dp)
...
